Fix scrollbars appearing on screens with a large height by partially reverting to 01da67c
Because of the dynamic font height, scrollbars could appear on browsers with a large screen height.

--- a/css/weather.css
+++ b/css/weather.css
@@ -19,19 +19,19 @@
 }
 
 .weather .number {
-    font-size: 10vh;
-    line-height: 10vh;
+    font-size: 100px;
+    line-height: 100px;
     font-family: 'Open Sans';
 }
 
 .weather .unit {
     position: relative;
     top: -40px;
-    font-size: 4vh;
+    font-size: 40px;
 }
 
 .weather .location {
-    font-size: 3vh;
+    font-size: 25px;
     text-align: right;
     text-overflow: ellipsis;
 
@@ -47,6 +47,6 @@
     bottom: 20px;
     width: 200px;
 
-    font-size: 2.5vw;
+    font-size: 35px;
     font-style: italic;
 }
